# kkeugi

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  TODOS.md
.github/workflows/: backend.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_backfill_partitions.py
backend/app/: config.py  deps.py  main.py  scheduler.py
backend/app/auth/: dev.py  google.py  jwt.py  routes.py
backend/app/channels/: dispatch.py  models.py  routes.py  senders.py
backend/app/db/: session.py
backend/app/health/: routes.py
backend/app/payments/: entitlement.py  models.py  products.py  routes.py  schemas.py  verifier.py
backend/app/reports/: llm.py  models.py  routes.py  schemas.py  service.py
backend/app/telegram/: client.py  routes.py
backend/app/thresholds/: models.py  routes.py  schemas.py
backend/app/usage/: models.py  partitions.py  routes.py  schemas.py
backend/app/users/: cleanup.py  models.py  routes.py  schemas.py
backend/scripts/: init-test-db.sql
backend/tests/: conftest.py  test_account.py  test_auth.py  test_dev_auth.py  test_dispatch.py  test_health.py  test_payments.py  test_reports.py  test_scheduler.py  test_telegram.py  test_thresholds.py  test_usage.py
docs/: ARCHITECTURE.md  PRD.md  REMAINING-WORK.md  W2-prestart-P0.md  W3-frontend-spec.md  W5-build-plan.md  W5-prestart-P0.md  W6-build-plan.md  W7-build-plan.md
frontend/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
frontend/lib/: app.dart  (+3 more)
(+58 files in other folders)
