[project]
name = "kkeugi-backend"
version = "0.1.0"
description = "끊기 (Kkeugi) FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "google-auth>=2.36.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "anthropic>=0.40.0",
    "apscheduler>=3.11.0",
    "sentry-sdk[fastapi]>=2.18.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency injection은 함수 기본값에서 호출하는 게 표준 패턴
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Security",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
